--- a/yizhou/2 服务器环境搭建.md
+++ b/yizhou/2 服务器环境搭建.md
@@ -1,6 +1,47 @@
 # 安装docker 
 
+进入容器	
+
+```
+docker exec -it redis-test /bin/bash
+```
+
 https://www.runoob.com/docker/centos-docker-install.html
+
+**卸载旧版本**
+
+```shell
+sudo yum remove docker \
+                  docker-client \
+                  docker-client-latest \
+                  docker-common \
+                  docker-latest \
+                  docker-latest-logrotate \
+                  docker-logrotate \
+                  docker-engine
+```
+
+**安装 Docker Engine-Community**
+
+```shell
+sudo yum install -y yum-utils \
+  device-mapper-persistent-data \
+  lvm2
+```
+
+```shell
+sudo yum-config-manager \
+    --add-repo \
+    https://download.docker.com/linux/centos/docker-ce.repo
+```
+
+```shell
+sudo yum install docker-ce docker-ce-cli containerd.io
+```
+
+```shell
+sudo systemctl start docker
+```
 
 # 安装 mysql
 
@@ -8,16 +49,35 @@ https://www.runoob.com/docker/docker-install-mysql.html
 
 注意事项：进入容器 使用 `docker exec -it <容器ID> /bin/bash`
 		  登录数据库 不使用`localhost`  而是 `127.0.0.1`
-		  
+
+
+
+```shell
+docker pull mysql:5.7
+```
+
+```shell
+docker run -itd --name mysql -p 3306:3306 -e MYSQL_ROOT_PASSWORD=123456 mysql 
+```
+
 # 安装 nginx
 https://www.runoob.com/docker/docker-install-nginx.html
 
 # 安装 Redis
 https://www.runoob.com/docker/docker-install-redis.html
 
+```shell
+ docker pull redis:latest
+```
 
-#搭建 文件服务器
- 
+```shell
+docker run -itd --name redis -p 6379:6379 redis
+```
+
+
+
+# 搭建 文件服务器
+
  拉取镜像
 
 ```properties
@@ -33,7 +93,7 @@ docker run -d --name tracker --net=host morunchang/fastdfs sh tracker.sh
 运行storage
 
 ```properties
-    docker run -d --name storage --net=host -e TRACKER_IP=<your tracker server address>:22122 -e GROUP_NAME=<group name> morunchang/fastdfs sh storage.sh
+docker run -d --name storage --net=host -e TRACKER_IP=<your tracker server address>:22122 -e GROUP_NAME=<group name> morunchang/fastdfs sh storage.sh
 ```
 
 - 使用的网络模式是–net=host, <your tracker server address> 替换为你机器的Ip即可  
@@ -96,7 +156,7 @@ docker run \
   -v /var/run/docker.sock:/var/run/docker.sock \
   -v "$HOME":/home \
   jenkinsci/blueocean
- 
+
 8090端口访问
 
 
