--- a/yizhou/集群搭建.md
+++ b/yizhou/集群搭建.md
@@ -199,9 +199,114 @@ NETWORK ID          NAME                    DRIVER              SCOPE
 
 **创建 Redis 实例并使用 overlay 网络模式**
 
+在宿主机上创建 volume 文件夹
+
 ```shell
-[root@manager221 ~]# docker service create --replicas 3 --network yizhou_net --name redis -p 6379:6379 redis
+[root@manager221 redis]# mkdir -p /usr/local/redis
+[root@manager221 redis]# mkdir -p /usr/local/redis/data
 ```
+
+**在 /usr/local/redis 目录下创建 redis.conf 配置文件**
+
+```shell
+#这是限制redis只能本地访问
+#bind 127.0.0.1 
+#默认yes，开启保护模式，限制为本地访问
+protected-mode no
+port 6379
+tcp-backlog 511
+timeout 0
+tcp-keepalive 300
+#改为yes会使配置文件方式启动redis失败
+daemonize no
+supervised no
+pidfile /var/run/redis_6379.pid
+loglevel notice
+logfile ""
+databases 16
+always-show-logo yes
+save 900 1
+save 300 10
+save 60 10000
+stop-writes-on-bgsave-error yes
+rdbcompression yes
+rdbchecksum yes
+dbfilename dump.rdb
+dir ./
+replica-serve-stale-data yes
+replica-read-only yes
+repl-diskless-sync no
+repl-diskless-sync-delay 5
+repl-disable-tcp-nodelay no
+replica-priority 100
+lazyfree-lazy-eviction no
+lazyfree-lazy-expire no
+lazyfree-lazy-server-del no
+replica-lazy-flush no
+appendonly yes
+appendfilename "appendonly.aof"
+appendfsync everysec
+no-appendfsync-on-rewrite no
+auto-aof-rewrite-percentage 100
+auto-aof-rewrite-min-size 64mb
+aof-load-truncated yes
+aof-use-rdb-preamble yes
+lua-time-limit 5000
+slowlog-log-slower-than 10000
+slowlog-max-len 128
+latency-monitor-threshold 0
+notify-keyspace-events ""
+hash-max-ziplist-entries 512
+hash-max-ziplist-value 64
+list-max-ziplist-size -2
+list-compress-depth 0
+set-max-intset-entries 512
+zset-max-ziplist-entries 128
+zset-max-ziplist-value 64
+hll-sparse-max-bytes 3000
+stream-node-max-bytes 4096
+stream-node-max-entries 100
+activerehashing yes
+client-output-buffer-limit normal 0 0 0
+client-output-buffer-limit replica 256mb 64mb 60
+client-output-buffer-limit pubsub 32mb 8mb 60
+hz 10
+dynamic-hz yes
+aof-rewrite-incremental-fsync yes
+rdb-save-incremental-fsync yes
+```
+
+**以上是redis 5.x 版本配置文件**
+
+
+
+**创建 redis-compose.yml 文件**
+
+```yml
+version: "3"
+services:
+  redis:
+    image: redis:5.0.8
+    ports:
+      - 6379:6379
+    deploy:
+      mode: replicated
+      replicas: 3
+    volumes:
+      - "/usr/local/redis/redis.conf:/etc/redis/redis.conf"
+      - "/usr/local/redis/data:/data"
+    command:
+      # 按配置文件启动 开启 aof
+      redis-server /etc/redis/redis.conf --appendonly yes  
+    networks:
+      - "yizhou_net"
+
+networks:
+  yizhou_net:
+    external: true
+```
+
+
 
 以上创建了三个 redis 实例。它们会平均分布到集群中的节点中
 
@@ -225,14 +330,14 @@ hhbc9fmj2ab9        redis.3             redis:latest        node223             
 
 ```shell
 [root@manager221 ~]# docker network inspect yizhou_net
-   "Containers": {
-            "4d0fb8d06694a4ae2bb10fcd63d1ca45fb954098fb0373340b93a768e05dca41": {
-                "Name": "redis.1.h81oy61bp0sh8p6hxyx9suhma",
-                "EndpointID": "393c376e7152d75bc08e239a2e0fdf16d2966386f95b837b40a5486d97a8d0e8",
-                "MacAddress": "02:42:0a:00:03:0f",
-                "IPv4Address": "10.0.3.15/24",
-                "IPv6Address": ""
-            }
+"Containers": {
+"4d0fb8d06694a4ae2bb10fcd63d1ca45fb954098fb0373340b93a768e05dca41": {
+"Name": "redis.1.h81oy61bp0sh8p6hxyx9suhma",
+"EndpointID": "393c376e7152d75bc08e239a2e0fdf16d2966386f95b837b40a5486d97a8d0e8",
+"MacAddress": "02:42:0a:00:03:0f",
+"IPv4Address": "10.0.3.15/24",
+"IPv6Address": ""
+}
 ```
 
 由上可知 master 节点上的 ip 是 `10.0.3.15`
@@ -264,4 +369,8 @@ set h 1 #设置一个值
 #到 node 节点下 进入redis
 get h # 查看能否获取值
 ```
+
+
+
+
 
